# qoar

./: .gitignore  .gitmodules  Cargo.toml  README.md
qoa-ref-sys/: Cargo.toml  build.rs  qoa-ref-codec.c
qoa-ref-sys/src/: lib.rs  qoa.rs
src/: conv.rs  decoder.rs  encoder.rs  io.rs  lib.rs  main.rs  pcm_io.rs  simd.rs  test.rs  util.rs
src/decoder/: bytes.rs
src/encoder/: slice_scaler.rs
src/test/: data.rs
tests/: bench.rs  common.rs  decode.rs  encode.rs  qoar_bench.rs  reference_codec_bench.rs
