[package]
name = "qoar"
version = "0.1.0"
edition = "2021"

[features]
default = ["conv"]
conv = ["dep:symphonia"]

[dependencies]
amplify_derive = "2.11.3"
symphonia = { version = "0.5.2", optional = true }

[dev-dependencies]
ctor = "0.2.0"
futures = "0.3.28"
indicatif = "0.17.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
reqwest = { version = "0.11.16", features = ["stream", "blocking"] }
zip = "0.6.4"
