[package]
name = "qoar"
version = "0.1.0"
edition = "2021"

[features]
default = ["conv", "simd"]
conv = ["dep:symphonia"]
simd = []

[dependencies]
amplify_derive = "2.11.3"
itertools = "0.10.5"
symphonia = { version = "0.5.2", optional = true }

[dev-dependencies]
ctor = "0.2.0"
futures = "0.3.28"
indicatif = "0.17.3"
qoa-ref-sys = { path = "qoa-ref-sys" }
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
reqwest = { version = "0.11.16", features = ["stream", "blocking"] }
zip = "0.6.4"
